--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
      <Compile Include="Assets\_Scripts\Hero.cs" />
      <Compile Include="Assets\_Scripts\Shield.cs" />
+     <Compile Include="Assets\_Scripts\Utils.cs" />
      <None Include="Assets\_Materials\UnlitAlpha.shader" />
  <Reference Include="UnityEngine.Networking">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
