--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -50,6 +50,7 @@
      <Compile Include="Assets\_Scripts\Main.cs" />
      <Compile Include="Assets\_Scripts\Shield.cs" />
      <Compile Include="Assets\_Scripts\Utils.cs" />
+     <Compile Include="Assets\_Scripts\Weapon.cs" />
      <None Include="Assets\_Materials\UnlitAlpha.shader" />
  <Reference Include="UnityEngine.Networking">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
