--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,6 +46,10 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\_Scripts\Enemy.cs" />
+     <Compile Include="Assets\_Scripts\Enemy_1.cs" />
+     <Compile Include="Assets\_Scripts\Enemy_2.cs" />
+     <Compile Include="Assets\_Scripts\Enemy_3.cs" />
+     <Compile Include="Assets\_Scripts\Enemy_4.cs" />
      <Compile Include="Assets\_Scripts\Hero.cs" />
      <Compile Include="Assets\_Scripts\Main.cs" />
      <Compile Include="Assets\_Scripts\PowerUp.cs" />
